--- a/sketches/index.html
+++ b/sketches/index.html
@@ -2,18 +2,13 @@
 <html>
 <head>
     <title>GIF Loop Coder</title>
+    <link rel="stylesheet" type="text/css" href="quicksettings_minimal.css">
 </head>
 <body>
 
     <!-- This should point to the sketch you want to run -->
     <script type="text/javascript" src="examples/allshapes.js"></script>
-
-
-
-
-
-
-    <!-- Don't touch this unless you move your sketches folder. If so, update the path to require.js -->
-    <script type="text/javascript" src="../glc/libs/require.js" data-main="glcloader"></script>
+    
+    <script type="text/javascript" src="glc-min.js"></script>
 </body>
 </html>
