combine and hide info/credits panels

--- a/sketches/index.html
+++ b/sketches/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <!-- This should point to the sketch you want to run -->
-    <script type="text/javascript" src="examples/allshapes.js"></script>
+    <script type="text/javascript" src="examples/intro.js"></script>
     
     <script type="text/javascript" src="glc-min.js"></script>
 </body>
