added settings option for useIntegratedEditor. panels remember position

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" type="text/css" href="styles/quicksettings_minimal.css">
     <link rel="stylesheet" type="text/css" href="styles/codemirror.css">
     <link rel="stylesheet" type="text/css" href="styles/glc.css">
+    <script type="text/javascript">
+    window.glcSettings = {
+        useIntegratedEditor: true
+    };
+    </script>
 </head>
 <body>
     <div id="header">
@@ -69,6 +74,9 @@
             ABOUT
         </div>
     </div>
+
+    <!-- to autoload a script on launch, uncomment next line and insert path to script. -->
+    <!-- <script type="text/javascript" src="../examples/allshapes.js"></script> -->
 
     <script type="text/javascript" src="glc-min.js"></script>
 </body>
