save code in local storage. new template button

--- a/app/index.html
+++ b/app/index.html
@@ -13,20 +13,25 @@
 </head>
 <body>
     <div id="header">
+        <div id='new_btn'>
+            <img src='icons/new.png'>
+            <br/>
+            NEW
+        </div>
         <div id='open_btn' title="Ctrl-F">
             <img src='icons/open.png'>
             <br/>
             OPEN
         </div>
-        <div id='compile_btn' title="Ctrl-Enter">
-            <img src='icons/compile.png'>
-            <br/>
-            COMPILE
-        </div>
         <div id='save_btn'>
             <img src='icons/save.png'>
             <br/>
             SAVE
+        </div>
+        <div id='compile_btn' title="Ctrl-Enter">
+            <img src='icons/compile.png'>
+            <br/>
+            COMPILE
         </div>
 
         <div class="separator"></div>
