--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,6 @@
     <!-- To use an external editor, set externalEditor to true above. -->
     <!-- Then uncomment the following line and set the path to your sketch JavaScript file. -->
     <!-- <script type="text/javascript" src="path/to/sketch.js"></script> -->
-    <!-- <script type="text/javascript" src="src/libs/require.js" data-main="src/main"></script> -->
-    <script type="text/javascript" src="glc-min.js"></script>
+    <script type="text/javascript" src="src/libs/require.js" data-main="src/main"></script>
 </body>
 </html>
