--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <div id="content"></div>
     <script type="text/javascript">
     glcConfig = {
-        externalEditor: true,
+        externalEditor: false,
         canvasWidth: 400,
         canvasHeight: 400
     };
