tabs or spaces option

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript">
     glcConfig = {
         externalEditor: false,
+        useTabs: false,
         canvasWidth: 400,
         canvasHeight: 400
     };
