--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     glcConfig = {
         externalEditor: false,
         canvasWidth: 400,
-        canvasHeight: 400
+        canvasHeight: 400,
+        useTabs: true
     };
     </script>
     <!-- To use an external editor, set externalEditor to true above. -->
