useTabs in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     <script type="text/javascript">
     glcConfig = {
         externalEditor: false,
+        useTabs: true, 
         canvasWidth: 400,
-        canvasHeight: 400,
-        useTabs: true
+        canvasHeight: 400
     };
     </script>
     <!-- To use an external editor, set externalEditor to true above. -->
