remove blur for performance reasons. added canvasCanScale option

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,8 @@
         externalEditor: false,
         useTabs: false,
         canvasWidth: 400,
-        canvasHeight: 400
+        canvasHeight: 400,
+        canvasCanScale: true
     };
     </script>
     <!-- To use an external editor, set externalEditor to true above. -->
