grunt added as build system

--- a/src/index_src.html
+++ b/src/index_src.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
     glcConfig = {
         externalEditor: false,
-        useTabs: false,
+        useTabs: true, 
         canvasWidth: 400,
         canvasHeight: 400,
         canvasCanScale: true
@@ -21,6 +21,6 @@
     <!-- To use an external editor, set externalEditor to true above. -->
     <!-- Then uncomment the following line and set the path to your sketch JavaScript file. -->
     <!-- <script type="text/javascript" src="path/to/sketch.js"></script> -->
-    <script type="text/javascript" src="glc-min.js"></script>
+    <script type="text/javascript" src="src/libs/require.js" data-main="src/main"></script>
 </body>
 </html>
