--- a/src/index_standalone.html
+++ b/src/index_standalone.html
@@ -12,15 +12,16 @@
     <script type="text/javascript">
     glcConfig = {
         externalEditor: false,
-        useTabs: false, 
+        useTabs: false,
         canvasWidth: 400,
         canvasHeight: 400,
         canvasCanScale: true
     };
+    if (window.require) {
+        window.nodeRequire = window.require;
+        delete window.require;
+    }
     </script>
-    <!-- To use an external editor, set externalEditor to true above. -->
-    <!-- Then uncomment the following line and set the path to your sketch JavaScript file. -->
-    <!-- <script type="text/javascript" src="path/to/sketch.js"></script> -->
     <script type="text/javascript" src="src/libs/require.js" data-main="src/main"></script>
 </body>
 </html>
