--- a/standalone/index.html
+++ b/standalone/index.html
@@ -12,15 +12,18 @@
     <script type="text/javascript">
     glcConfig = {
         externalEditor: false,
-        useTabs: false, 
+		canvasCanScale: true,
         canvasWidth: 400,
-        canvasHeight: 400,
-        canvasCanScale: true
+        canvasHeight: 400
     };
+	if (window.require) {
+		window.nodeRequire = window.require;
+		delete window.require;
+	}
     </script>
     <!-- To use an external editor, set externalEditor to true above. -->
     <!-- Then uncomment the following line and set the path to your sketch JavaScript file. -->
     <!-- <script type="text/javascript" src="path/to/sketch.js"></script> -->
-    <script type="text/javascript" src="src/libs/require.js" data-main="src/main"></script>
+    <script type="text/javascript" src="glc-min.js"></script>
 </body>
 </html>
