standalone support via electron.atom.io

--- a/src/index_standalone.html
+++ b/src/index_standalone.html
@@ -15,7 +15,8 @@
         useTabs: false,
         canvasWidth: 400,
         canvasHeight: 400,
-        canvasCanScale: true
+        canvasCanScale: true,
+        isStandalone: true
     };
     if (window.require) {
         window.nodeRequire = window.require;
